// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`/cli.js should default to outputting to stdout 1`] = `
"/* packages/cli/test/specimens/simple.css */
.mc73666a66_wooga { color: red; }"
`;

exports[`/cli.js should show help with no args 1`] = `
"CLI for modular-css

  Usage
  $ modular-css [options] <glob>...

  Options
  --dir,     -d <dir>    Directory to search from [process cwd]
  --out,     -o <file>   File to write output CSS to [stdout]
  --json,    -j <file>   File to write output compositions JSON to
  --map,     -m          Include inline source map in output
  --rewrite, -r          Control rewriting of url() references in CSS
  --help                 Show this help"
`;

exports[`/cli.js should support disabling url() rewriting (--no-rewrite) 1`] = `
"/* packages/cli/test/specimens/no-rewrite.css */
.mc0d1faef2_a {
    background: url("image.png");
}
"
`;

exports[`/cli.js should support outputting compositions to a file (--json) 1`] = `
"{
    "packages/cli/test/specimens/simple.css": {
        "wooga": "mc73666a66_wooga"
    }
}"
`;

exports[`/cli.js should support outputting to a file (--out) 1`] = `
"/* packages/cli/test/specimens/simple.css */
.mc73666a66_wooga { color: red; }
"
`;
